--- a/style.css
+++ b/style.css
@@ -165,3 +165,21 @@ img {
     padding-bottom: 15px;
     text-align: center;
 }
+
+footer {
+    background-color: rgb(178, 202, 197);
+}
+
+.foot-container {
+    display: flex;
+    margin-top: 10rem;
+    justify-content: space-around
+}
+.box2 {
+    padding: 2rem;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+    display: inline-block;
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}
