created home folder and added home file and img in it also created the login file

--- a/style.css
+++ b/style.css
@@ -167,3 +167,8 @@ footer {
     text-decoration: underline;
     text-underline-offset: 10px;
 }
+
+.text {
+    display: block;
+    padding: 0.5rem;
+}
