--- a/Login/style.css
+++ b/Login/style.css
@@ -4,12 +4,57 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Ubuntu", sans-serif;
 }
 
 body { 
-  font-family: "Ubuntu", sans-serif;
   font-weight: 300;
   font-style: normal;
   color:rgb(63, 63, 56);
-  background-color: rgb(218, 228, 226)
+  background-color: rgb(218, 228, 226);
+}
+
+/* header {
+    padding-top: 2rem;
+    padding-left: 3rem;
+    background: green
+} */
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: purple;
+}
+
+/* section {
+    border: 1px solid aliceblue;
+    padding: 1rem;
+    background-color: aliceblue;
+    border-radius: 0.5rem;
+} */
+.card {
+    width: 420px;
+    background:green;
+    color: #fff;
+}
+
+.card h1 {
+    font-size: 36px;
+    text-align: center;
+ }
+ 
+.card .input-box {
+    width: 100%;
+    height: 50%;
+    background: salmon;
+    margin: 30px 0;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
 }
