--- a/Login/style.css
+++ b/Login/style.css
@@ -8,17 +8,17 @@
 }
 
 body { 
-  font-weight: 300;
+  /* font-weight: 300;
   font-style: normal;
   color:rgb(63, 63, 56);
-  background-color: rgb(218, 228, 226);
+  background-color: rgb(218, 228, 226); */
 }
 
-/* header {
+header {
     padding-top: 2rem;
     padding-left: 3rem;
     background: green
-} */
+}
 
 section {
     display: flex;
@@ -28,15 +28,16 @@ section {
     background: purple;
 }
 
-/* section {
+section {
     border: 1px solid aliceblue;
     padding: 1rem;
     background-color: aliceblue;
     border-radius: 0.5rem;
-} */
+}
+
 .card {
     width: 420px;
-    background:green;
+    background:purple;
     color: #fff;
 }
 
@@ -47,8 +48,7 @@ section {
  
 .card .input-box {
     width: 100%;
-    height: 50%;
-    background: salmon;
+    height: 50px;
     margin: 30px 0;
 }
 
@@ -57,4 +57,46 @@ section {
     height: 100%;
     background: transparent;
     border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
+
+.input-box input::placeholder {
+    color: #fff;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.card .remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 3px;
+
+}
+
+.remember-forgot a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.card
