--- a/Login/style.css
+++ b/Login/style.css
@@ -8,16 +8,15 @@
 }
 
 body { 
-  /* font-weight: 300;
+  font-weight: 300;
   font-style: normal;
   color:rgb(63, 63, 56);
-  background-color: rgb(218, 228, 226); */
+  background-color: rgb(218, 228, 226);
 }
 
 header {
     padding-top: 2rem;
     padding-left: 3rem;
-    background: green
 }
 
 section {
@@ -25,11 +24,11 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: purple;
+    background: rgb(95, 73, 95);
 }
 
 section {
-    border: 1px solid aliceblue;
+    border: 1px solid rgb(218, 225, 232);
     padding: 1rem;
     background-color: aliceblue;
     border-radius: 0.5rem;
@@ -37,8 +36,12 @@ section {
 
 .card {
     width: 420px;
-    background:purple;
-    color: #fff;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    
+    /* color: #fff; */
+    border-radius: 10px;
+    padding: 30px 40px;
 }
 
 .card h1 {
@@ -47,6 +50,7 @@ section {
  }
  
 .card .input-box {
+    position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
@@ -58,15 +62,11 @@ section {
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(36, 32, 32, 0.2);
     border-radius: 40px;
     font-size: 16px;
     color: #fff;
     padding: 20px 45px 20px 20px;
-}
-
-.input-box input::placeholder {
-    color: #fff;
 }
 
 .input-box i {
@@ -82,7 +82,7 @@ section {
     justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;
-}
+} 
 
 .remember-forgot label input {
     accent-color: #fff;
@@ -91,7 +91,7 @@ section {
 }
 
 .remember-forgot a {
-    color: #fff;
+    /* color: #fff; */
     text-decoration: none;
 }
 
@@ -99,4 +99,32 @@ section {
     text-decoration: underline;
 }
 
-.card
+.card .btn {
+    width: 100%;
+    height: 45px;
+    /* background: #fff; */
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    /* color: #333; */
+    font-weight: 600;
+}
+
+.wrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.register-link p a {
+   /*  color: #fff; */
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.register-link p a:hover {
+    text-decoration: underline;
+}
