--- a/Home/Login/style.css
+++ b/Home/Login/style.css
@@ -11,12 +11,14 @@ body {
   font-weight: 300;
   font-style: normal;
   color:rgb(63, 63, 56);
-  background-color: rgb(218, 228, 226);
+  background-color: rgb(240, 245, 244);
 }
 
 header {
+    font-size: 12px;
     padding-top: 2rem;
-    padding-left: 3rem;
+    padding-left: 4rem;
+    padding-bottom: 1rem;
 }
 
 section {
@@ -24,21 +26,20 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: rgb(95, 73, 95);
+    background: purple;
 }
 
 section {
-    border: 1px solid rgb(218, 225, 232);
+    border: 1px solid aliceblue;
     padding: 1rem;
-    background-color: aliceblue;
+    background-color: rgb(218, 228, 226);
     border-radius: 0.5rem;
 }
 
 .card {
     width: 420px;
     background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    
+    border: 2px solid rgba(13, 8, 8, 0.2);
     /* color: #fff; */
     border-radius: 10px;
     padding: 30px 40px;
@@ -65,7 +66,7 @@ section {
     border: 2px solid rgba(36, 32, 32, 0.2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: rgb(63, 63, 56);
     padding: 20px 45px 20px 20px;
 }
 
@@ -91,7 +92,7 @@ section {
 }
 
 .remember-forgot a {
-    /* color: #fff; */
+    color: #3a2424;
     text-decoration: none;
 }
 
@@ -102,14 +103,14 @@ section {
 .card .btn {
     width: 100%;
     height: 45px;
-    /* background: #fff; */
+    background: #271d1d;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    /* color: #333; */
+    color: white;
     font-weight: 600;
 }
 
