--- a/signup/style.css
+++ b/signup/style.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Hand+Pre:wght@400..700&family=Quicksand:wght@300..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-body { 
+body header { 
   font-family: "Ubuntu", sans-serif;
   font-weight: 300;
   font-style: normal;
   color:rgb(63, 63, 56);
-  background-color: rgb(218, 228, 226);
 }
 
 .new-link {
@@ -13,7 +12,7 @@ body {
     color: rgb(15, 18, 19);
 }
 
-a:hover, a:focus {
+.new-link:hover, .new-link:focus {
     text-decoration: underline;
     text-decoration-color: black;
     text-underline-offset: 10px;
