created signup form with bootstrap css

--- a/signup/style.css
+++ b/signup/style.css
@@ -17,3 +17,7 @@ body header {
     text-decoration-color: black;
     text-underline-offset: 10px;
 }
+
+/* main {
+    background-color: rgb(218, 228, 226);
+} */
