--- a/Login/style.css
+++ b/Login/style.css
@@ -1,24 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Hand+Pre:wght@400..700&family=Quicksand:wght@300..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-* {
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Ubuntu", sans-serif;
-}
+} */
 
-body { 
+/* body { 
   font-weight: 300;
   font-style: normal;
   color:rgb(63, 63, 56);
   background-color: rgb(240, 245, 244);
-}
+} */
 
-header {
+/* header {
     font-size: 12px;
     padding-top: 2rem;
     padding-left: 4rem;
     padding-bottom: 1rem;
+} */
+
+body header { 
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color:rgb(63, 63, 56);
+}
+
+.new-link {
+    text-decoration: none;
+    color:rgb(63, 63, 56);
+}
+
+.new-link:hover, .new-link:focus {
+    text-decoration: underline;
+    text-decoration-color: black;
+    text-underline-offset: 10px;
 }
 
 section {
