--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -100,15 +100,42 @@ body {
   margin-left:120px;
 }
 
+.row2 .quick-action{
+  text-align: center;
+}
+
+.row2 .card-container{
+  text-align: center;
+}
+
 .card-container button{
   font-size: 26px;
   margin: 10px;
+  width: 100%;
   border-radius: 10px;
   overflow: hidden;
   padding: 10px 120px 10px 120px;
   border: 1px solid rgb(203, 202, 202);
   color:#fff;
-  background-color: #666;
+  background-color: #2a2929;
 }
 
+footer {
+    background-color: rgb(178, 202, 197);
+}
+
+.foot-content {
+    display: flex;
+    margin-top: 10rem;
+    justify-content: space-around
+}
+
+.footer-section {
+    padding: 2rem;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+    display: inline-block;
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}
 
